--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "build": "tsc"
   },
+  "engines": {
+    "node": "12.22.9"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "config": "^3.3.7",
