--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Jordan Wriker",
   "license": "MIT",
   "scripts": {
+    "start": "ts-node-dev --respawn --transpile-only src/app.ts",
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "build": "tsc"
   },
